--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProjetoEITA"
         tools:targetApi="31">
-
+        <activity
+            android:name=".CadastrarVagasActivity"
+            android:exported="false" />
         <activity
             android:name=".DescriptionProjectActivity"
             android:exported="false" />
